// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BankAccountNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="name"
      >
        Numer konta bankowego
      </label>
      <input
        class="sc-kEqYlL jzZEFj"
        id="bankAccountNumberField"
        label="Numer konta bankowego"
        name="name"
        placeholder="Numer konta bankowego"
        value="test"
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        Podany numer konta jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<BankAccountNumberField /> matches snapshot 1`] = `
<input
  class="sc-kEqYlL honwIS"
  id="bankAccountNumberField"
  label="Numer konta bankowego"
  name="name"
  placeholder="Numer konta bankowego"
  value=""
/>
`;

exports[`<BankAccountNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <input
        class="sc-kEqYlL jzZEFj"
        id="bankAccountNumberField"
        label="Test"
        name="name"
        placeholder="Numer konta bankowego*"
        required=""
        value=""
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<BankAccountNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="name"
      >
        Test
      </label>
      <input
        class="sc-kEqYlL honwIS"
        id="bankAccountNumberField"
        label="Test"
        name="name"
        placeholder="Numer konta bankowego"
        value=""
      />
    </div>
  </form>
</div>
`;
